FIX: Animations & Transitions on mobile devices removed

--- a/Styles/elements.css
+++ b/Styles/elements.css
@@ -14,10 +14,6 @@
   font-size: 3.5vw;
   font-weight: 100;
   color: var(--nearwhite);
-  width: 100%;
-  white-space: nowrap;
-  overflow: hidden;
-  animation: typing 1.6s;
 }
 
 .hero h2 {
@@ -27,10 +23,22 @@
   font-size: 2vw;
   font-weight: 100;
   color: var(--nearwhite);
-  width: 100%;
-  white-space: nowrap;
-  overflow: hidden;
-  animation: typing 1.2s steps(3);
+}
+
+@media screen and (min-width: 1200px) {
+  .hero h1 {
+    width: 100%;
+    white-space: nowrap;
+    overflow: hidden;
+    animation: typing 1.6s;
+  }
+  
+  .hero h2 {
+    width: 100%;
+    white-space: nowrap;
+    overflow: hidden;
+    animation: typing 1.2s steps(3);
+  }
 }
 
 @keyframes typing {
@@ -89,14 +97,6 @@
   border-top-right-radius: 10px;
   border-bottom-left-radius: 0px;
   border-top-left-radius: 0px;
-  transform: translateX(40px);
-  opacity: 0;
-  transition: 1s ease;
-}
-
-.flyer__content.visible {
-  transform: translateX(0);
-  opacity: 1;
 }
 
 .flyer__content h1 {
@@ -143,14 +143,29 @@
 
 .flyer__image {
   margin: auto 3rem;
-  transform: translateY(20px);
-  opacity: 0;
-  transition: 1s ease;
 }
 
-.flyer__image.visible {
-  transform: translateY(0);
-  opacity: 1;
+@media screen and (min-width: 1200px) {
+  .flyer__content {
+    transform: translateX(40px);
+    opacity: 0;
+    transition: 1s ease;
+  }
+  
+  .flyer__content.visible {
+    transform: translateX(0);
+    opacity: 1;
+  }
+
+  .flyer__image {
+    transform: translateY(20px);
+    opacity: 0;
+    transition: 1s ease;
+  }
+  .flyer__image.visible {
+    transform: translateY(0);
+    opacity: 1;
+  }
 }
 
 .flyer__image--card {
